--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "engines": {
     "node": "6.3.1",
     "npm": "3.10.3"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.13.3"
   }
 }
