--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "async": "^2.1.5",
     "body-parser": "^1.16.1",
+    "csv-parser": "^1.11.0",
     "express": "^4.13.3",
     "express-less": "^0.1.0",
     "jsrender": "^0.9.83",
